--- a/src/partials/service.html
+++ b/src/partials/service.html
@@ -1,7 +1,8 @@
 <section class="service">
-  <div class="container">
-    <div class="service__inner">
-      <div class="service__item">
+  <div class="service__inner">
+
+    <div class="service__item service__item--dark">
+      <div class="container">
         <div class="service__top">О курсе</div>
         <p class="service__description">Мы обучаем только современные методам и стандартам трансплантации волос в Мире</p>
         <div class="service__slider">
@@ -9,8 +10,8 @@
         </div>
         <div class="service__cards">
           <div class="service__card">
-             <h5 class="service__card-title">Образовательный курс для врачей</h5>  
-             <button class="service__card-btn">
+              <h5 class="service__card-title">Образовательный курс для врачей</h5>  
+              <button class="service__card-btn">
               <svg class="service__card-icon">
                 <use xlink:href="img/sprite.svg#array-down"></use>
               </svg>
@@ -21,18 +22,20 @@
           <div class="service__card">
             <h5 class="service__card-title">Длительность курса 4-5 дней</h5>  
             <button class="service__card-btn">
-             <svg class="service__card-icon">
-               <use xlink:href="img/sprite.svg#array-down"></use>
-             </svg>
-             <span>PDF</span>
-           </button>
-           <p class="service__card-text">После окончания обучения врач обладает всеми необходимыми навыками для самостоятельно работы с пациентами.</p>        
-         </div>
-        </div> 
-        <button class="service__btn">Подробнее о курсе</button>          
-      </div>  
-      
-      <div class="service__item">
+              <svg class="service__card-icon">
+                <use xlink:href="img/sprite.svg#array-down"></use>
+              </svg>
+              <span>PDF</span>
+            </button>
+            <p class="service__card-text">После окончания обучения врач обладает всеми необходимыми навыками для самостоятельно работы с пациентами.</p>        
+          </div>
+        </div>
+        <button class="service__btn">Подробнее о курсе</button> 
+      </div>         
+    </div>  
+
+    <div class="service__item service__item--dark no-raduis">
+      <div class="container">
         <div class="service__top">преимущества</div>
         <div class="service__edge">
           <p class="service__description service__description--medium">Благодаря большому объему практических занятий, <span class="service__description-strong">врач на 100% готов к самостоятельной работе</span> с пациентом по окончанию курса</p>
@@ -54,10 +57,12 @@
               <p class="service__box-text">Готовность к самостоятельной работе</p>
             </div>
           </div>
-        </div>   
+        </div> 
       </div>  
- 
-      <div class="service__item service__item--light ">
+    </div>  
+
+    <div class="service__item">
+      <div class="container">
         <div class="service__top service__top--light">o преподавателе курса</div>
         <div class="service__wrap-item">
           <div class="service__wrap-item-desc">
@@ -67,41 +72,73 @@
             <div class="service__text-info">Профессор Американской Академии Эстетической медицины, член Международного Общества Восстановительной Хирургии Волос (ISHRS), Азиатской Ассоциации Восстановительной Хирургии Волос (AAHRS).</div>
             <button class="service__btn-course">Подробнее  о преподавателе</button>
           </div>
+          <img src="img/portrait-big.png" alt="" class="service__portrait">
           <div class="service__wrap-item-portrait">
-            <img src="img/portrait.png" alt="" class="service__portrait">
-            <img src="img/hair-skin.png" alt="" class="service__bg-hair-skin">
+            <img src="img/svg/hair-skin.svg" alt="" class="service__bg-hair-skin">
           </div>
         </div>
-        
-        <div class="service__text-slide">
+      </div>
+    </div>
+
+    <div class="" style="height: 60px; background: #000;">
+         text-slider
+    </div>
+
+    
+    <div class="service__item">
+      <div class="container">
+        <div class="service__top service__top--light">О клинике</div>
+        <h5 class="service__text-h2 service__text-h2--clinic">Инновационный Институт HAIR & SKIN</h5>
+        <div class="service__wrap-clinic">
+          <p class="service__description service__description--clinic">Специализируется на пересадке волос, оздоровлении волос и кожи и предлагает медицинский комплексный подход к решению задач красоты и здоровья.</p>
+          <div class="service__text-info service__text-info--muted">Наш оздоровительный центр был создан для требовательных пациентов, которые ценят сочетание современного медицинского подхода и последних достижений в мире эстетики.</div>
+          <div class="service__text-info service__text-info--muted">Команда докторов профессионалов клиники подбирает решение для каждого пациента, учитывая взаимосвязь всех процессов, происходящих в организме. Новейшее диагностическое оборудование, уникальный опыт и высокий профессонализм позволяют врачам выявить причину ухудшения качества волос и кожи и составить индивидуальный комплексный план лечения.</div>
+          <div class="service__btn-info">
+            <span>Узнать больше</span>
+            <svg class="banner__icon">
+              <use xlink:href="img/sprite.svg#array-up"></use>
+            </svg>
+          </div>
+        </div>
+
+        <div class="service__course-slider">
+          
+          <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+              <div class="swiper-slide slide_1">
+                <img src="img/slide.jpg" />
+              </div>
+              <div class="swiper-slide slide_2">
+                <img src="img/slide.jpg" />
+              </div>
+              <div class="swiper-slide slide_3">
+                <img src="img/slide.jpg" />
+              </div>
+              <div class="swiper-slide slide_4">
+                <img src="img/slide.jpg" />
+              </div>
+              <div class="swiper-slide slide_5">
+                <img src="img/slide.jpg" />
+              </div>
+            </div>
+            <div class="swiper-pagination"></div>
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+          </div>
 
         </div>
       </div>
-      
-      <div class="service__item service__item--light ">
-        <div class="service__top service__top--light">О клинике</div>
-        <h5 class="service__text-h2">Инновационный Институт HAIR & SKIN</h5>
-        <p class="service__description service__description--clinic">Специализируется на пересадке волос, оздоровлении волос и кожи и предлагает медицинский комплексный подход к решению задач красоты и здоровья.</p>
-        <div class="service__text-info service__text-info--muted">Наш оздоровительный центр был создан для требовательных пациентов, которые ценят сочетание современного медицинского подхода и последних достижений в мире эстетики.</div>
-        <div class="service__text-info service__text-info--muted">Команда докторов профессионалов клиники подбирает решение для каждого пациента, учитывая взаимосвязь всех процессов, происходящих в организме. Новейшее диагностическое оборудование, уникальный опыт и высокий профессонализм позволяют врачам выявить причину ухудшения качества волос и кожи и составить индивидуальный комплексный план лечения.</div>
-        <div class="service__btn-info">
-          <span>Узнать больше</span>
-          <svg class="banner__icon">
-            <use xlink:href="img/sprite.svg#array-up"></use>
-          </svg>
-        </div>
-        <div class="service__course-slider">
+    </div> 
 
-        </div>
-      </div> 
 
-      <div class="service__item service__item--light ">
+    <div class="service__item">
+      <div class="container">
         <div class="service__top service__top--light">ДАТЫ КУРСА</div> 
         <div class="service__schedule">
           <div class="service__schedule-card">
             <p class="service__schedule-date">23 - 28 МАРТА, 2023</p>
             <span class="service__schedule-hour">(10:00 - 18:00)</span>
-            <ul class="service__schedule-list">
+            <ul class="service__schedule-list service__schedule-list--course">
               <li class="service__schedule-list-step">Процедуры пересадки волос</li>
               <li class="service__schedule-list-step">Учебные курсы</li>
               <li class="service__schedule-list-step">Группа укомплектована</li>
@@ -111,7 +148,7 @@
           <div class="service__schedule-card">
             <p class="service__schedule-date">23 - 28 МАРТА, 2023</p>
             <span class="service__schedule-hour">(10:00 - 18:00)</span>
-            <ul class="service__schedule-list">
+            <ul class="service__schedule-list service__schedule-list--course">
               <li class="service__schedule-list-step">Процедуры пересадки волос</li>
               <li class="service__schedule-list-step">Учебные курсы</li>
               <li class="service__schedule-list-step">Группа укомплектована</li>
@@ -121,7 +158,7 @@
           <div class="service__schedule-card">
             <p class="service__schedule-date">23 - 28 МАРТА, 2023</p>
             <span class="service__schedule-hour">(10:00 - 18:00)</span>
-            <ul class="service__schedule-list">
+            <ul class="service__schedule-list service__schedule-list--course">
               <li class="service__schedule-list-step">Процедуры пересадки волос</li>
               <li class="service__schedule-list-step">Учебные курсы</li>
               <li class="service__schedule-list-step">Группа укомплектована</li>
@@ -130,18 +167,23 @@
           </div>
         </div>
         <div class="service__schedule-video">
-
+        
         </div>
-      </div> 
+      </div>
+    </div> 
 
-      <div class="service__item service__item--light ">
+    <div class="service__item">
+      <div class="container" style="position: relative;">
         <div class="service__top service__top--light">опыт и практика</div>
-        <h5 class="service__text-h2">Инновационный Институт HAIR & SKIN</h5>
-        <ul class="service__schedule-list service__schedule-list--pratice">
-          <li class="service__schedule-list-step">Обучающиеся изучают обязанности ассистента хирурга (препарирование графтов под стереомикроскопами и их имплантация)</li>
-          <li class="service__schedule-list-step">Будут ассистировать в операции доктора Цилосани, также ученик сам проводит операцию, а доктор и его команда помогают ему</li>
-          <li class="service__schedule-list-step">Примут участие в 6-8 операциях, где извлекут и имплантируют графты</li>
-        </ul>
+        <div class="service__wrap-practice">
+          <h5 class="service__text-h2">Во время обучения</h5>
+          <ul class="service__schedule-list service__schedule-list--pratice">
+            <li class="service__schedule-list-step">Обучающиеся изучают обязанности ассистента хирурга (препарирование графтов под стереомикроскопами и их имплантация)</li>
+            <li class="service__schedule-list-step">Будут ассистировать в операции доктора Цилосани, также ученик сам проводит операцию, а доктор и его команда помогают ему</li>
+            <li class="service__schedule-list-step">Примут участие в 6-8 операциях, где извлекут и имплантируют графты</li>
+          </ul>
+          <button class="service__btn-course service__btn-course--practice for-desktop">Подробнее  о курсе</button>
+        </div>
         <img src="img/schedule-banner.jpg" alt="image" class="service__schedule-image">
         <div class="service__step-cards">
           <div class="service__step-card-item">
@@ -157,10 +199,12 @@
             <p class="service__step-card-text">Индивидуальный подбор моделей</p>
           </div>
         </div>
-        <button class="service__btn-course service__btn-course--practice">Подробнее  о курсе</button>
-      </div> 
+        <button class="service__btn-course service__btn-course--practice for-mobile">Подробнее  о курсе</button>
+      </div>
+    </div> 
 
-      <div class="service__item service__item--light ">
+    <div class="service__item">
+      <div class="container">
         <div class="service__top service__top--light">
           <span>Отзывы о курсе</span>
           <div class="service__btn-info service__btn-info--review">
@@ -186,10 +230,12 @@
             </div>
           </div>
         </div>
-        
-      </div> 
+      </div>
+      
+    </div> 
 
-      <div class="service__item service__item--light ">
+    <div class="service__item">
+      <div class="container">
         <div class="service__top service__top--light">
           <span>новости/Блог</span>
           <div class="service__btn-info service__btn-info--review">
@@ -234,8 +280,8 @@
             </div>
           </div>
         </div>
-      </div> 
+      </div>
+    </div> 
 
-    </div>
   </div>
 </section> 
