--- a/src/scss/components/_footer.scss
+++ b/src/scss/components/_footer.scss
@@ -12,6 +12,24 @@
     display: flex;
     flex-direction: column;
     gap: 60px;
+    @media screen  and (min-width: 768px) {
+      flex-direction: row;
+    }
+  }
+  &__form-group {
+    @media screen  and (min-width: 768px) {
+      width: 50%;
+    }
+  }
+  &__form-address {
+    font-family: $font_Heraclito;
+    font-weight: 500;
+    font-size: 20px;
+    line-height: 130%;
+    color: #F2F2F2;
+    @media screen  and (min-width: 768px) {
+      margin-top: 60px;
+    }
   }
   &__form-input {
     padding: 19px 20px;
@@ -58,13 +76,7 @@
     height: 50px;
     width: 100%;
   }
-  &__form-address {
-    font-family: $font_Heraclito;
-    font-weight: 500;
-    font-size: 20px;
-    line-height: 130%;
-    color: #F2F2F2;
-  }
+  
   &__form-phone {
     font-size: 25px;
     margin-bottom: 30px;
@@ -85,6 +97,15 @@
     gap: 30px;
     border-bottom: 1px solid #BDBDBD;
     padding-bottom: 24px;
+    @media screen  and (min-width: 768px) {
+      position: relative;
+    }
+    @media screen  and (min-width: 1228px) {
+      flex-direction: row;
+      align-items: center;
+      justify-content: space-between;
+    }
+    
   }
   &__logo {
     width: 236px;
@@ -97,6 +118,13 @@
     //column-gap: 20px;
     justify-content: space-between;
     row-gap: 15px;
+    @media screen  and (min-width: 768px) {
+      gap: 20px;
+      justify-content: flex-start;
+    }
+    @media screen  and (min-width: 1228px) {
+      gap: 30px;
+    }
   }
   &__nav-link {
     font-family: $font_lato;
@@ -105,6 +133,19 @@
     line-height: 140%;
     color: #181818;
     width: 47%;
+    @media screen  and (min-width: 768px) {
+      width: auto;
+    }
+  }
+  &__social {
+    @media screen  and (min-width: 768px) {
+      position: absolute;
+      right: 0;
+      top: 15px;
+    }
+    @media screen  and (min-width: 1228px) {
+      position: initial;
+    }
   }
   &__social-img {
     width: 34px;
@@ -115,6 +156,14 @@
     margin-top: 20px;
     padding-bottom: 20px;
     border-bottom: 1px solid #BDBDBD;
+    position: relative;
+    @media screen  and (min-width: 768px) {
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+      padding-bottom: 13px;
+      border: none;
+    }
   }
   &__copy-right {
     font-family: $font_lato;
@@ -124,6 +173,9 @@
     color: #4A4A4A;
     opacity: 0.5;
     margin-bottom: 15px;
+    @media screen  and (min-width: 1228px) {
+      margin-bottom: 0;
+    }
   }
   &__bottom-list {
     font-family: $font_lato;
@@ -136,6 +188,13 @@
     color: #181818;
     opacity: 0.5;
     margin-bottom: 20px;
+    @media screen  and (min-width: 768px) {
+      flex-direction: row;
+      align-items: center;
+    }
+    @media screen  and (min-width: 1228px) {
+      margin-bottom: 0;
+    }
 
     span {
       display: inline-block;
@@ -159,6 +218,14 @@
         margin-left: 4px;
         background: #E72144;
       }
+    }
+    @media screen  and (min-width: 768px) {
+      position: absolute;
+      right: 0;
+      bottom: -20px;
+    }
+    @media screen  and (min-width: 1228px) {
+      position: initial;
     }
   }
   &__meta {
