--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -14,5 +14,7 @@
   <link href="https://fonts.googleapis.com/css2?family=Lato&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="css/vendor.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="https://unpkg.com/swiper@8/swiper-bundle.min.css"/>
+  <script defer src="https://unpkg.com/swiper@8/swiper-bundle.min.js"></script>
   <script defer src="js/main.js"></script>
 </head>
