--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -15,6 +15,9 @@ html {
   //font-family: var(--font-family, sans-serif);//
   font-family: "Lato", sans-serif;
   font-size: 16px;
+  overflow: hidden;
+
+  
 }
 
 .container {
@@ -22,7 +25,7 @@ html {
   padding-left: 10px;
   padding-right: 10px;
   margin: 0 auto;
-  overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
+  //overflow: hidden; // если используете на сайте position: sticky - уберите эту настройку
   @media screen  and (min-width: 768px) {
       padding-left: 38px;
       padding-right: 38px;
@@ -31,9 +34,10 @@ html {
 
 .page {
   margin: 0 auto;
-  //min-width: 320px;
   max-width: 1600px;
-  min-height: 100%;
+  //min-height: 100%;
+  overflow-x: hidden;
+  //border: 2px solid red;
 }
 
 img {
@@ -72,6 +76,3 @@ input {
   background-color: #fff;
 }
 
-.main {
-  background: url(../img/main-bg.png) cover/center;
-}
