--- a/src/scss/components/_service.scss
+++ b/src/scss/components/_service.scss
@@ -1,13 +1,21 @@
 .service {
   
-  background: $black;
-  border-radius: 15px 15px 0px 0px;
+  //background: $black;
+  //border-radius: 15px 15px 0px 0px;
   &__item {
-
+    padding-top: 80px;
+    &--dark {
+      background: $black;
+      border-radius: 15px 15px 0px 0px;
+      &.no-raduis {
+        border-radius: 0px;
+      }
+    }
+    
   }
   &__top {
     padding-top: 15px;
-    margin-top: 80px;
+    //margin-top: 80px;
     border-top : 1px solid $grey;
     font-family: $font_Heraclito;
     font-weight: 400;
@@ -18,6 +26,11 @@
     @media screen  and (min-width: 768px) {
       margin-top: 120px;
     }
+    @media screen  and (min-width: 1280px) {
+      font-size: 25px;
+      padding-top: 20px;
+    }
+
     &--light {
      margin-top: 0;
     }
@@ -33,6 +46,17 @@
       flex: 1;
     }
   }
+  &__wrap-clinic {
+    @media screen  and (min-width: 768px) {
+      padding-left: 240px;
+    }
+  }
+  &__wrap-practice {
+    @media screen  and (min-width: 768px) {
+      //width: 47%;
+      width: 340px;
+    }
+  }
   &__description {
     font-family: $font_Heraclito;
     font-weight: 500;
@@ -43,11 +67,19 @@
     @media screen  and (min-width: 768px) {
       margin-top: 40px;
     }
+    @media screen  and (min-width: 1280px) {
+      font-size: 50px;
+      margin-top: 50px;
+    }
     &--medium {
       font-size: 20px;
       line-height: 130%;
       @media screen  and (min-width: 768px) {
         flex: 1;
+      }
+      @media screen  and (min-width: 1280px) {
+        font-size: 25px;
+        flex: 0 0 420px   ;
       }
     }
     &--course {
@@ -70,6 +102,32 @@
   &__description-strong {
     color: $main_blue 
   }
+  &__course-slider {
+    margin-top: 52px;
+
+    .swiper-pagination-bullet {
+        width: var(--swiper-pagination-bullet-width,var(--swiper-pagination-bullet-size,8px));
+        height: var(--swiper-pagination-bullet-height,var(--swiper-pagination-bullet-size,8px));
+        display: inline-block;
+        border-radius: 50%;
+        background: var(--swiper-pagination-bullet-inactive-color,#000);
+        opacity: var(--swiper-pagination-bullet-inactive-opacity, .2);
+
+        //
+        border-radius: 0px;
+        border: 2px solid #1F93AE;
+        border-radius: 40px;
+        width: 14px;
+        height: 4px;
+        background: $main_blue;
+    }
+
+    .swiper-pagination-bullet.swiper-pagination-bullet-active {
+      background: red;
+      border-color: red;
+    }
+
+  }
   &__slider {
     margin-top: 40px;
   }
@@ -89,6 +147,9 @@
     @media screen  and (min-width: 768px) {
       flex: 1;
       margin-bottom: 30px;
+    }
+    @media screen  and (min-width: 1280px) {
+      padding: 30px;
     }
   }
   &__card-title {
@@ -154,25 +215,40 @@
     line-height: 52px;
     text-transform: uppercase;
     margin-right: 5px;
-    color: $white
+    color: $white;
+    @media screen  and (min-width: 1280px) {
+      width: 448px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
+    
   }
   &__item {
+    position: relative;
+    display: block;
+    width: 100%;
+    // &--light {
+    //   background-color: $white;
+    //   padding-top: 80px;
+    //   margin-left: -10px;
+    //   margin-right: -10px;
+    //   padding-left: 10px;
+    //   padding-right: 10px;
+    //   @media screen  and (min-width: 768px) {
+    //     padding-top: 100px;
+    //     margin-left: -40px;
+    //     margin-right: -40px;
+    //     padding-left: 40px;
+    //     padding-right: 40px;
+    //   }
 
-    &--light {
-      background-color: $white;
-      padding-top: 80px;
-      margin-left: -10px;
-      margin-right: -10px;
-      padding-left: 10px;
-      padding-right: 10px;
-      @media screen  and (min-width: 768px) {
-        padding-top: 100px;
-      }
+
       
-    }
+    
   }
   &__wrap-item {
-
+    
     @media screen  and (min-width: 768px) {
       display: flex;
     }
@@ -186,11 +262,47 @@
   &__wrap-item-portrait {
     @media screen  and (min-width: 768px) {
       flex: 1;
+      position: relative;
+    }
+  }
+  &__bg-hair-skin {
+    display: none;
+    @media screen  and (min-width: 768px) {
+      display: block;
+      position: absolute;
+      top: 50px;
+      left:0px;
+      right: 0;
+      display: block;
+      width: 100%;
+      //width: 340px;
+      
+    }
+
+  }
+  &__portrait {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    @media screen  and (min-width: 768px) {
+      position: absolute;
+      bottom: 59px;
+      width: 65%;
+      width: 503px;
+      right: -50px;
+      z-index: 2;
+    }
+    @media screen  and (min-width: 1280px) {
+      right: 0;
+      width: 752px;
+      height: 631px;
+      bottom: -2px;
     }
   }
   &__box {
     margin-top: 42px;
-    margin-bottom: 65px;
+    //margin-bottom: 65px;
+    padding-bottom: 65px;
   }
   &__box-item {
     background-color: $main_blue;
@@ -231,8 +343,20 @@
     line-height: 110%;
     color: $main_blue;
     margin-top: 30px;
-    //margin-bottom: 25px;
     padding-bottom: 25px;
+    @media screen  and (min-width: 768px) {
+      font-size: 40px;
+     
+    }
+    @media screen  and (min-width: 1280px) {
+      margin-top: 50px;
+      padding-bottom: 50px;
+    }
+    &--clinic {
+      @media screen  and (min-width: 768px) {
+        width: 558px;
+      }
+    }
 
   }
   &__text-info {
@@ -255,23 +379,31 @@
     line-height: 46px;
     width: 100%;
     margin-bottom: 30px;
+    @media screen  and (min-width: 1280px) {
+      margin-bottom: 88px;
+    }
     &--practice {
       margin-bottom: 0;
-    }
-  }
-  &__bg-hair-skin {
-    display: none;
-    @media screen  and (min-width: 768px) {
-      display: block;
+      &.for-mobile {
+        @media screen  and (min-width: 768px) {
+          display: none;
+        }
+      }
+      &.for-desktop {
+        display: none;
+        @media screen  and (min-width: 768px) {
+          display: block;
+          margin-top: 30px;
+        }
+        @media screen  and (min-width: 1280px) {
+          
+        }
+      }
     }
 
   }
-  &__text-slide {
-    height: 60px;
-    background: #303030;
-    margin-left: -10px;
-    margin-right: -10px;
-  }
+  
+ 
   &__btn-info {
     @include text-button;
 
@@ -287,12 +419,27 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
+    @media screen  and (min-width: 768px) {
+      flex-direction: row;
+      flex-wrap: wrap;
+      //justify-content: space-between;
+    }
+    @media screen  and (min-width: 1280px) {
+      gap: 0;
+      justify-content: space-between;
+    }
   }
   &__schedule-card {
     background: #FFFFFF;
     box-shadow: 3px 4px 25px rgba(0, 0, 0, 0.07);
     padding: 25px 21px;
     //margin-bottom: 18px;
+    @media screen  and (min-width: 768px) {
+      width: 48.5%;
+    }
+    @media screen  and (min-width: 1280px) {
+      width: 32.5%;
+    }
   }
   &__schedule-date {
     font-family: $font_lato;
@@ -313,6 +460,13 @@
 
     &--pratice {
       padding-left: 10px;
+    }
+    &--course {
+      @media screen  and (min-width: 1280px) {
+        padding-left: 20px;
+        margin-top: 19px;
+        margin-bottom: 10px;
+      }
     }
   }
   &__schedule-list-step {
@@ -348,6 +502,21 @@
     margin-top: 30px;
     display: block;
     width: 100%;
+    @media screen  and (min-width: 768px) {
+      position: absolute;
+      top: 160px;
+      right: 40px;
+      width: 40%;
+      //height: 16.6%;
+      height: 354px;
+    }
+    @media screen  and (min-width: 1280px) {
+      right: 40px;
+      top: 40px;
+      width: 50%;
+      //height: 540px;
+      height: 434px
+    }
   }
   &__step-cards {
     display: flex;
@@ -355,13 +524,25 @@
     gap: 20px;
     margin-bottom: 30px;
     margin-top: 20px;
+    @media screen  and (min-width: 768px) {
+     flex-direction: row;
+     gap: 16px;
+     margin-bottom: 0;
+     margin-top: 50px;
+    }
   }
   &__step-card-item {
-
+    @media screen  and (min-width: 1280px) {
+      flex: 1;
+    }
+    
   }
   &__step-card-img {
     display: block;
     width: 100%;
+    @media screen  and (min-width: 768px) {
+      //height: 210px;
+    }
   }
   &__step-card-text {
     font-family: $font_lato;
@@ -370,6 +551,9 @@
     line-height: 140%;
     color: $black;
     margin-top: 15px;
+    @media screen  and (min-width: 768px) {
+      font-size: 12px;
+    }
   }
   &__card-slide-inner {
 
@@ -425,15 +609,28 @@
     flex-direction: column;
     gap: 15px;
     padding-bottom: 80px;
+    @media screen  and (min-width: 1280px) {
+      flex-direction: row;
+      gap: 20px;
+    }
   }
   &__blog-item {
     position: relative;
     height: 325px;
+    @media screen  and (min-width: 768px) {
+      height: 446px;
+    }
+    @media screen  and (min-width: 1280px) {
+      flex: 1;
+    }
   }
   &__blog-img {
     display: block;
     width: 100%;
     height: 190px;
+    @media screen  and (min-width: 768px) {
+      height: 300px;
+    }
 
   }
   &__blog-body {
@@ -462,6 +659,13 @@
     line-height: 14px;
     color: #939393;
     margin-bottom: 15px;
+    @media screen  and (min-width: 768px) {
+      width: 584px;
+    }
+    @media screen  and (min-width: 1280px) {
+      width: 100%;
+    }
+    
   }
   &__blog-footer {
     font-family: $font_lato;
